[package]
name = "tristan"
description = "Telegram bot that deletes join/leave system messages"
version = "2.0.0"
edition = "2021"
authors = ["thaseyor"]
license = "MIT"
repository = "https://github.com/thaseyor/tristan.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide =  { version = "0.9.2", features = ["macros", "auto-send"] }
tokio = { version =  "1.20", features = ["rt-multi-thread", "macros"] }
